styling font judul dan sub-judul

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,15 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+/* font-family: 'Oswald', sans-serif;
+font-family: 'Roboto', sans-serif; */
 ul{
     list-style-type: none;
 }
 
-
 /* pengalaman */
-
+.judul-pengalaman{
+    font-family: 'Roboto', sans-serif;
+}
 .Pengalaman{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.2fr 0.2fr;
     grid-gap: 0.2rem;
 }
 
@@ -17,6 +21,9 @@ ul{
     text-align: left;
 }
 
+.Pengalaman h2{
+    font-family: 'Roboto', sans-serif;
+}
 
 .kemampuan{
     width: 100%;
@@ -24,6 +31,10 @@ ul{
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 0.2rem;
+}
+
+.kemampuan h2{
+    font-family: 'Roboto', sans-serif;
 }
 
 .kemampuan li{
