--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+/* font-family: 'Oswald', sans-serif;
+font-family: 'Roboto', sans-serif; */
+.judul-kontak{
+    font-family: 'Roboto', sans-serif;
+}
+
 .konten-kontak{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 0.8fr;
     grid-gap: 0.2rem;
+}
+
+.konten-kontak h2{
+    font-family: 'Roboto', sans-serif;
 }
