--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -21,6 +21,7 @@ font-family: 'Roboto', sans-serif; */
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.2fr 0.2fr;
     grid-gap: 0.2rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 .img-porto1{
@@ -37,6 +38,7 @@ font-family: 'Roboto', sans-serif; */
 
 .porto-tulis li{
     text-align: left;
+    font-family: 'Roboto', sans-serif;
 }
 
 .skripsi{
