--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 /* font-family: 'Oswald', sans-serif;
 font-family: 'Roboto', sans-serif; */
+
 .judul-kontak{
     font-family: 'Roboto', sans-serif;
 }
@@ -13,6 +14,14 @@ font-family: 'Roboto', sans-serif; */
     grid-gap: 0.2rem;
 }
 
+.konten-kontak-umum{
+    font-family: 'Roboto', sans-serif;
+}
+
 .konten-kontak h2{
+    font-family: 'Roboto', sans-serif;
+}
+
+.konten-kontak-sosmed{
     font-family: 'Roboto', sans-serif;
 }
