--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -3,7 +3,7 @@
 font-family: 'Roboto', sans-serif; */
 
 .judul-porto{
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .porto-web li{
