--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -4,6 +4,7 @@ font-family: 'Roboto', sans-serif; */
 
 .judul-kontak{
     font-family: 'Roboto', sans-serif;
+    padding-bottom: 2%;
 }
 
 .konten-kontak{
